# ia-finde-2026

./: .gitignore
week-11/: README.md  agent.py  chain.py  compose.yml  ingestor.py  langgraph.json  pyproject.toml  query.py
week-12/: langgraph.json  main.py  pyproject.toml
week-14/voice-sandwich-demo/: .env.example  .gitignore  .prettierignore  Makefile  README.md
week-14/voice-sandwich-demo/components/python/: pyproject.toml
week-14/voice-sandwich-demo/components/python/src/: admin.html  assemblyai_stt.py  cartesia_prompts.py  cartesia_tts.py  elevenlabs_tts.py  events.py  main.py  restaurant_db.py  utils.py
week-14/voice-sandwich-demo/components/typescript/: eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
week-14/voice-sandwich-demo/components/typescript/src/: index.ts  types.ts  utils.ts
week-14/voice-sandwich-demo/components/web/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
week-4/invoice-processor/: .gitignore  README.md  package.json  pnpm-lock.yaml  prompts.md  turbo.json
week-4/invoice-processor/.playwright-cli/: page-2026-02-28T18-17-32-025Z.yml  page-2026-02-28T18-17-41-248Z.yml  page-2026-02-28T18-18-08-126Z.yml  page-2026-02-28T18-18-22-945Z.yml  page-2026-02-28T18-18-50-440Z.yml  page-2026-02-28T18-20-38-467Z.yml  page-2026-02-28T18-20-48-132Z.yml  page-2026-02-28T18-21-01-054Z.yml
week-4/invoice-processor/apps/api/: drizzle.config.ts  package.json  tsconfig.json
week-4/invoice-processor/apps/web/: package.json
week-7/: README.md  compose.yml  ingestor.py  main.py  pyproject.toml  query.py
(+25 files in other folders)
