[project]
name = "week-12"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain[openai]>=1.2.15",
    "langchain-community>=0.4.1",
    "langgraph>=1.1.9",
    "langgraph-cli[inmem]>=0.4.24",
    "langchain-openai>=1.2.1",
]
